# text2hologram

./: .gitignore  README.md  SD2CGH.ipynb  requirements.txt  sd2cgh.py  “From-stablediffusion2CGH-V1”.ipynb  “StableDiffusion2CGH-V1”.ipynb
CGHoutput/: data.pt
text2hologram/: MANIFEST.in  README.md  pyproject.toml
text2hologram/src/text2hologram/: __main__.py  color_recon.py  config.json  device_setup.py  image_generation.py  image_processing_utils.py  model.py  post_processing.py  read_all.py  settings.py  super_resolution.py  utils.py
text2hologram/src/text2hologram.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
