# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2hologram"
version = "0.1.5"
description = "Generate holograms from text"
readme = "README.md"
authors = [{ name = "Pengze Li", email = "linsonng@163.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["text", "hologram"]
dependencies = [
    "odak==0.2.3",
    "timm==0.9.2",
    "transformers==4.30.2",
    "diffusers==0.17.1",
    "accelerate==0.20.3",
    "torch>=2.0.1",
    "openvino==2023.0.1",
]
requires-python = ">=3.9"


[project.urls]
Homepage = "https://github.com/Linsonng/text2hologram"

[project.scripts]
text2hologram = "text2hologram.__main__:main"